src/res/style.css
@import url('https://fonts.googleapis.com/css2?family=Merienda+One&display=swap');


/* style 3 parallel horizont menu lines */
.menu-icon {
    cursor: pointer;
}

.menu-icon > .line {
    background-color: #ffffff;
    height: 3px;
    display: block;
    width: 30px;
    box-shadow: 1px 1px 1px 1px #3e000066;
}
.menu-icon > .line + .line {
    margin-top: 8px;
}
/* End style 3 parallel horizont menu lines */

* {
    box-sizing: border-box;
} 

html, body {
    margin: 0;
    padding: 0;
    height: 100%;
}


header {
    display: flex;
    align-items: center;
    padding: 10px;
    background: #991b1b;
    color: #fff;
    height: calc(50px + 1vw);
}

#logo {
    flex-grow: 2;
    text-align: center;
    font-size: calc(15px + 1vw);
    font-weight: 700;
    font-family: 'Merienda One', cursive;
}

#main-container {
    height: calc(100vh - 1vw - 50px);
    display: flex;
    gap: 2px;
}

#sidebar {
    width: 280px;
    background: #fafafa;
    box-shadow: 1px 1px 1px 1px #c3c3c3;
    padding: 25px;
}

#task-container {
    flex-grow: 2;
    display: flex;
    justify-content: center;

}

.task-wrapper {
    width: 80%;
    padding: 6px;

}

#sidebar {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.sidebar-option {
    display: flex;
    align-items: center;
    gap: 5px;
}

#projects-heading {
    font-size: 24px;
    border-bottom: 1px solid #cacaca;
    margin-bottom: 10px;
    padding-bottom: 4px;
}

#project-list {
    margin-left: 15px;
}



.task-options {
    display: flex;
    flex-direction: column;
}

.task-container-option {
    background-color: #eee;
    padding: 10px;
    margin: 5px;
    border-radius: 4px;
    border: 1px solid #acacac;
    cursor: pointer;
    outline: none;
}

.select-input-container {
    align-self: center;
    display: flex;
    gap: 20px;
}


.status-options {
    display: flex;
    gap: 6px;
}

#task-list-container {
    margin-top: 40px;
    height: 65%;
    border: 1px solid #dedede;
    box-shadow: 1px 1px 1px 1px #fafafa;
    padding: 8px;
}

.task {
    display: flex;
    justify-content: space-between;
    border-bottom: 1px solid #eee;
    padding-bottom: 6px;
}

.left-task-container, .right-task-container {
    display: flex;
    align-items: center;
    gap: 20px;
  
}

#add-task {
    padding: 8px;
    cursor: pointer;
}

.task-menu {
    font-weight: 600;
    cursor: pointer;
}

.task-important {
    height: 18px;
    align-self: flex-start;
    cursor: pointer;
}

/* custom checkbox styles */
/* The container */
.check-container {
    display: block;
    position: relative;
    padding-left: 14px;
    margin-bottom: 24px;
    cursor: pointer;
    font-size: 22px;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    /* border: 1px solid #000; */
}

/* Hide the browser's default checkbox */
.check-container input {
    position: absolute;
    opacity: 0;
    cursor: pointer;
    height: 0;
    width: 0;
}

/* Create a custom checkbox */
.checkmark {
    position: absolute;
    top: 1px;
    left: 3px;
    height: 21px;
    width: 21px;
    background-color: #eee;
    border: 1px solid #cdcdcd;
    transition-duration: 400ms;
}

/* On mouse-over, add a grey background color */
.check-container:hover input ~ .checkmark {
    background-color: #ccc;
}

/* When the checkbox is checked, add a blue background */
.check-container input:checked ~ .checkmark {
    background-color: #84cc16;
    border: 1px solid #64a118;
}

/* Create the checkmark/indicator (hidden when not checked) */
.checkmark:after {
    content: "";
    position: absolute;
    display: none;
}

/* Show the checkmark when checked */
.check-container input:checked ~ .checkmark:after {
    displa    left: 6px;
    top: 1px;
    width: 4px;
    height: 11px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate( 
    45deg);
    -ms-transform: rotate(45deg);
    transform: rotate( 
    45deg);y: block;
}

/* Style the checkmark/indicator */
.check-container .checkmark:after {
    left: 6px;
    top: 1px;
    width: 4px;
    height: 11px;
    border: solid white;
    border-width: 0 3px 3px 0;
    -webkit-transform: rotate( 
    45deg);
    -ms-transform: rotate(45deg);
    transform: rotate( 
    45deg);
}

  /* End custom checkbox styles */

/*start custom scrollbar */
/* Works on Firefox */
#task-list-container {
    scrollbar-width: thin;
    scrollbar-color: white #f44336;
    overflow: auto;
}
  
/* Works on Chrome, Edge, and Safari */
#task-list-container::-webkit-scrollbar {
    width: 10px;
}

#task-list-container::-webkit-scrollbar-track {
    background: #f44336;
    border-left: 1px solid #9f1717;
}

#task-list-container::-webkit-scrollbar-thumb {
    background-color: white;
}

